# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test-and-lint.yml
page_loader/: __init__.py  data_handler.py  data_processing_and_saving_functions.py  data_saver.py  file_handler.py  page_loader.py  resource_processor.py  resources_handler.py  url_handler.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: downloaded_page.html  ru-hexlet-io-courses.html
